Start building grid

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 :root {
   --color-present: #c9b458;
   --color-correct: #6aaa64;
