--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,60 @@
-html {
-  box-sizing: border-box;
-}
-
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-
 :root {
   --color-present: #c9b458;
   --color-correct: #6aaa64;
   --color-absent: #787c7e;
   --color-border: #d3d6da;
+  --dark-text: #333333;
+  --light-text: #ffffff;
+  font-family: Helvetica, Arial, sans-serif;
+}
+
+.grid {
+  width: 350px;
+  height: 420px;
+  display: grid;
+  grid-template-rows: repeat(6, 1fr);
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 5px;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+.tile {
+  width: 100%;
+  height: 100%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2.1rem;
+  line-height: 2rem;
+  font-family: 'Roboto';
+  font-weight: 700;
+  vertical-align: middle;
+  box-sizing: border-box;
+  color: var(--light-text);
+  text-transform: uppercase;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .tile[data-state=absent] {
   background-color: var(--color-absent);
+  border: 2px solid var(--color-absent);
 }
 
 .tile[data-state=present] {
   background-color: var(--color-present);
+  border: 2px solid var(--color-present);
 }
 
 .tile[data-state=correct] {
   background-color: var(--color-correct);
+  border: 2px solid var(--color-correct);
 }
 
 .tile[data-state=empty] {
   border: 2px solid var(--color-border);
+  color: var(--dark-text);
 }
