--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,26 @@
   font-family: Helvetica, Arial, sans-serif;
 }
 
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+header {
+  padding: 10px 10px 0;
+}
+
+input[type=text] {
+  width: 330px;
+  padding: 5px;
+}
+
+html.no-touchevents input[type=text] {
+  display: none;
+}
+
 .grid {
   width: 350px;
   height: 420px;
@@ -16,7 +36,6 @@
   grid-template-columns: repeat(5, 1fr);
   grid-gap: 5px;
   padding: 10px;
-  box-sizing: border-box;
 }
 
 .tile {
@@ -30,7 +49,6 @@
   font-family: 'Roboto';
   font-weight: 700;
   vertical-align: middle;
-  box-sizing: border-box;
   color: var(--light-text);
   text-transform: uppercase;
   -webkit-user-select: none;
@@ -65,7 +83,6 @@
   grid-template-columns: repeat(5, 1fr);
   grid-gap: 5px;
   padding: 10px;
-  box-sizing: border-box;
 }
 
 .word {
@@ -73,8 +90,4 @@
   background: #eee;
   padding: 4px;
   text-align: center;
-}
-
-html.no-touchevents button {
-  display: none;
 }
