--- a/css/style.css
+++ b/css/style.css
@@ -11,25 +11,34 @@
 html {
   box-sizing: border-box;
 }
+
 *, *:before, *:after {
   box-sizing: inherit;
 }
 
+#app {
+  width: 350px;
+  margin: auto;
+}
+
+h1 {
+  font-size: 1.8em;
+  margin: 0 0 10px;
+  text-align: center;
+}
+
 header {
+  width: 100%;
   padding: 10px 10px 0;
 }
 
 input[type=text] {
-  width: 330px;
+  width: 100%;
   padding: 5px;
 }
 
-html.no-touchevents input[type=text] {
-  display: none;
-}
-
 .grid {
-  width: 350px;
+  width: 100%;
   height: 420px;
   display: grid;
   grid-template-rows: repeat(6, 1fr);
@@ -86,7 +95,7 @@ html.no-touchevents input[type=text] {
 }
 
 .word {
-  width: 54px;
+  width: 62px;
   background: #eee;
   padding: 4px;
   text-align: center;
